<resources>
    <string name="app_name">GCIT-GateScan</string>
    <string name="opennavDrawer">Open Navigation Drawer</string>
    <string name="closenavDrawer">close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="title">GCIT-GateScan</string>
    <string name="forgot_message">It seems like you have forgot password for GCIT-GateScan
    If this is true,provide the registered email below and submit it. Please rest using the given link.
    </string>
</resources>